--- a/InitialConfig.hs.Example
+++ b/InitialConfig.hs.Example
@@ -6,7 +6,7 @@ initialConfig = BotConfig { bot_nickname    = "RaBot"
                           , bot_server      = "asimov.freenode.net"
                           , bot_port        = "6667"
                           , bot_chans       = ["RaBotsChannel"]
-                          , bot_commandFile = "Commands.hs"
+                          , bot_commandDir  = "Commands.hs"
                           , bot_logDir      = "logs/"
                           , bot_scriptDir   = "scripts/"
                           , bot_ownerNick   = "foo"
