--- a/InitialConfig.hs.Example
+++ b/InitialConfig.hs.Example
@@ -5,13 +5,14 @@ import Config
 initialConfig = BotConfig { bot_nickname    = "RaBot"
                           , bot_server      = "asimov.freenode.net"
                           , bot_port        = "6667"
-                          , bot_chans       = ["RaBotsChannel"]
-                          , bot_commandDir  = "Commands.hs"
+                          , bot_chans       = ["#RaBotsChannel"]
+                          , bot_commandDir  = "./commands/"
                           , bot_logDir      = "logs/"
                           , bot_scriptDir   = "scripts/"
                           , bot_ownerNick   = "foo"
                           , bot_ownerUser   = "bar"
                           , bot_Char        = ">>="
+                          , bot_debugLevel  = 0
                           }
 
 
